dodano odnosniki do stron

--- a/wizytowka.html
+++ b/wizytowka.html
@@ -1,9 +1,16 @@
 <html>
 <body>
     <div itemscope itemtype="http://schema.org/Person">
+      <img scr="saitama.jpg"/>
       <span itemprop="name">Mikolaj Kosinski</span>
       <span itemprop="jobTitle">Student</span>
       <a href="http://v-ie.uek.krakow.pl/~s186943" itemprop="url">http://v-ie.uek.krakow.pl/~s186943</a>
-    </div>
+      <a href="facebook.com" itemprop="url">face
+	<ul id="social media">
+<li><a href="facebook.com">Facebook</a>
+<li><a href="twitter.com">Twitter</a>
+<li><a href="google.com">Google</a>
+</ul>
+	</div>
   </body>
 </html>
