--- a/wizytowka.html
+++ b/wizytowka.html
@@ -1,16 +1,15 @@
 <html>
 <body>
+	<img scr="saitama.gif"/>
     <div itemscope itemtype="http://schema.org/Person">
-      <img scr="saitama.jpg"/>
       <span itemprop="name">Mikolaj Kosinski</span>
       <span itemprop="jobTitle">Student</span>
       <a href="http://v-ie.uek.krakow.pl/~s186943" itemprop="url">http://v-ie.uek.krakow.pl/~s186943</a>
-      <a href="facebook.com" itemprop="url">face
 	<ul id="social media">
-<li><a href="facebook.com">Facebook</a>
-<li><a href="twitter.com">Twitter</a>
-<li><a href="google.com">Google</a>
-</ul>
+		<li><a href="https://facebook.com">Facebook</li></a>
+		<li><a href="https://twitter.com">Twitter</li></a>
+		<li><a href="https://google.com">Google</li></a>
+	</ul>
 	</div>
   </body>
 </html>
