--- a/wizytowka.html
+++ b/wizytowka.html
@@ -1,9 +1,9 @@
 <html>
 <body>
-	<img scr="saitama.gif"/>
+<img src="saitama.gif"/>
     <div itemscope itemtype="http://schema.org/Person">
       <span itemprop="name">Mikolaj Kosinski</span>
-      <span itemprop="jobTitle">Student</span>
+   <span itemprop="jobTitle">Student</span>
       <a href="http://v-ie.uek.krakow.pl/~s186943" itemprop="url">http://v-ie.uek.krakow.pl/~s186943</a>
 	<ul id="social media">
 		<li><a href="https://facebook.com">Facebook</li></a>
