--- a/wizytowka.html
+++ b/wizytowka.html
@@ -1,5 +1,6 @@
 <html>
 <body>
+<center>
 <img src="saitama.gif"/>
     <div itemscope itemtype="http://schema.org/Person">
       <span itemprop="name">Mikolaj Kosinski</span>
@@ -11,5 +12,6 @@
 		<li><a href="https://google.com">Google</li></a>
 	</ul>
 	</div>
+</center>
   </body>
 </html>
