--- a/wizytowka.html
+++ b/wizytowka.html
@@ -11,5 +11,8 @@
 		<li><a href="https://google.com">Google</li></a>
 	</ul>
 	</div>
+	<div id="about.me"></div>
+	<p> yolo </p>
+	</div>
   </body>
 </html>
