--- a/wizytowka.html
+++ b/wizytowka.html
@@ -11,8 +11,6 @@
 		<li><a href="https://google.com">Google</li></a>
 	</ul>
 	</div>
-	<div id="about.me"></div>
-	<p> yolo </p>
-	</div>
+	<div id="about.me"><p>work pls<p></div>
   </body>
 </html>
